--- a/BaitTranslator/Views/ShellPage.xaml
+++ b/BaitTranslator/Views/ShellPage.xaml
@@ -32,6 +32,7 @@
             Edit String/en-US/Resources.resw: Add a menu item title for each page
             -->
             <winui:NavigationViewItem x:Uid="Shell_Main" Icon="Document" helpers:NavHelper.NavigateTo="BaitTranslator.ViewModels.MainViewModel" />
+            <winui:NavigationViewItem x:Uid="Shell_Blank" Icon="Document" helpers:NavHelper.NavigateTo="BaitTranslator.ViewModels.BlankViewModel" />
         </winui:NavigationView.MenuItems>
         <i:Interaction.Behaviors>
             <behaviors:NavigationViewHeaderBehavior
