--- a/BaitTranslator/Views/ShellPage.xaml
+++ b/BaitTranslator/Views/ShellPage.xaml
@@ -23,6 +23,7 @@
         IsBackEnabled="{x:Bind ViewModel.IsBackEnabled, Mode=OneWay}"
         SelectedItem="{x:Bind ViewModel.Selected, Mode=OneWay}"
         IsSettingsVisible="True"
+        PaneDisplayMode ="Top"
         Background="{ThemeResource SystemControlBackgroundAltHighBrush}">
         <winui:NavigationView.MenuItems>
             <!--
@@ -32,7 +33,7 @@
             Edit String/en-US/Resources.resw: Add a menu item title for each page
             -->
             <winui:NavigationViewItem x:Uid="Shell_Main" Icon="Document" helpers:NavHelper.NavigateTo="BaitTranslator.ViewModels.MainViewModel" />
-            <winui:NavigationViewItem x:Uid="Shell_Blank" Icon="Document" helpers:NavHelper.NavigateTo="BaitTranslator.ViewModels.BlankViewModel" />
+            <winui:NavigationViewItem x:Uid="Shell_Blank" Icon="Folder" helpers:NavHelper.NavigateTo="BaitTranslator.ViewModels.BlankViewModel" />
         </winui:NavigationView.MenuItems>
         <i:Interaction.Behaviors>
             <behaviors:NavigationViewHeaderBehavior
