--- a/BaitTranslator/Views/MainPage.xaml
+++ b/BaitTranslator/Views/MainPage.xaml
@@ -8,7 +8,7 @@
     mc:Ignorable="d">
     <Grid x:Name="ContentArea" Margin="{StaticResource MediumLeftRightMargin}">
         <Grid
-            Background="{ThemeResource SystemControlPageBackgroundChromeLowBrush}">
+            Name ="Grid"  Background="{ThemeResource SystemControlPageBackgroundChromeLowBrush}" DragOver="Grid_OnDragOver" Drop="Grid_OnDrop" AllowDrop="True">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="3*"></ColumnDefinition>
                 <ColumnDefinition Width="3*"></ColumnDefinition>
